--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^4.2.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.11",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.47.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
